# MindHelper

./: .gitignore  README.md  pyrightconfig.json
backend/: .env.example  README.md  pyproject.toml  pytest.ini
backend/apps/accounts/: admin.py  forms.py  managers.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/assessments/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/chat/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/common/: models.py  permissions.py
backend/apps/directory/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/neural_engine/: admin.py  apps.py  audit.py  generation.py  models.py  policy.py  routing.py  safety_scenarios.py
backend/apps/platform_ops/: admin.py  apps.py  forms.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/telegram_bot/: apps.py  services.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  test.py
backend/mindhelper_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/accounts/: test_auth_api.py  test_user_manager.py
backend/tests/chat/: test_chat_api.py  test_chat_services.py
backend/tests/directory/: test_api.py  test_reference_data.py  test_services.py
backend/tests/neural_engine/: test_audit.py  test_generation.py  test_policy.py  test_routing.py
backend/tests/platform_ops/: test_admin_ollama.py  (+3 more)
(+88 files in other folders)
