[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindhelper-backend"
version = "0.1.0"
description = "MindHelper backend powered by Django and PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<5.3",
    "djangorestframework>=3.16,<4.0",
    "django-cors-headers>=4.7,<5.0",
    "python-dotenv>=1.1,<2.0",
    "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.11,<5.0",
    "factory-boy>=3.3,<4.0",
    "coverage[toml]>=7.6,<8.0",
    "ruff>=0.11,<1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["apps", "config"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["apps*", "config*"]
